--- a/WhitePlatinum/WhitePlatinum.csproj
+++ b/WhitePlatinum/WhitePlatinum.csproj
@@ -15,6 +15,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WhitePlatinumLib\WhitePlatinumLib.csproj" />
   </ItemGroup>
 
