--- a/WhitePlatinumLib/WhitePlatinumLib.csproj
+++ b/WhitePlatinumLib/WhitePlatinumLib.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.10.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
