--- a/WhitePlatinum/appsettings.json
+++ b/WhitePlatinum/appsettings.json
@@ -1,10 +1,16 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
-    "AllowedHosts": "*"
+	"PlatinumConfig": {
+		"EnableLogging": false,
+		"DumpLastRequestJson": true,
+		"DumpLastDataJson": true,
+		"DumpLastResponseFile": false
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+	"AllowedHosts": "*"
 }
