--- a/WhitePlatinum/appsettings.json
+++ b/WhitePlatinum/appsettings.json
@@ -3,7 +3,7 @@
 		"EnableLogging": false,
 		"DumpLastRequestJson": true,
 		"DumpLastDataJson": true,
-		"DumpLastResponseFile": false
+		"DumpLastResponseFile": true
 	},
 	"Logging": {
 		"LogLevel": {
